[gd_scene load_steps=6 format=3 uid="uid://bmr821yqq384h"]

[ext_resource type="Texture2D" uid="uid://b1wpk2ifmx57v" path="res://assets/characters/cloud.webp" id="1_aq0hv"]
[ext_resource type="Script" path="res://scripts/lawn.gd" id="1_at88b"]
[ext_resource type="Texture2D" uid="uid://cfoj6bykblnu3" path="res://assets/characters/karen.webp" id="2_qqjkf"]
[ext_resource type="AudioStream" uid="uid://btswdr1uwkaew" path="res://sfx/lawnmower.ogg" id="5_pw6mi"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vljbn"]
load_path = "res://.godot/imported/lawnmower.webp-9ad2d56687fc3ea462f0c77e095f0a60.ctex"

[node name="Lawn" type="Node2D"]
script = ExtResource("1_at88b")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 479.0
offset_top = 196.0
offset_right = 1739.0
offset_bottom = 1136.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 40
columns = 4

[node name="Sprite2D" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_aq0hv")
expand_mode = 1

[node name="Sprite2D2" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_aq0hv")

[node name="Sprite2D3" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("2_qqjkf")

[node name="Sprite2D4" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_aq0hv")

[node name="Sprite2D5" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("2_qqjkf")

[node name="Sprite2D6" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("2_qqjkf")

[node name="Sprite2D7" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_aq0hv")

[node name="Sprite2D8" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("2_qqjkf")

[node name="Sprite2D9" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_aq0hv")

[node name="Sprite2D10" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("2_qqjkf")

[node name="Sprite2D11" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_aq0hv")

[node name="Sprite2D12" type="TextureRect" parent="GridContainer"]
layout_mode = 2
texture = ExtResource("1_aq0hv")

[node name="ButtonMow1" type="Button" parent="."]
offset_left = 233.0
offset_top = 253.0
offset_right = 433.0
offset_bottom = 353.0
theme_override_font_sizes/font_size = 60
text = "Mow
"

[node name="ButtonMow2" type="Button" parent="."]
offset_left = 230.0
offset_top = 523.0
offset_right = 430.0
offset_bottom = 623.0
theme_override_font_sizes/font_size = 60
text = "Mow
"

[node name="ButtonMow3" type="Button" parent="."]
offset_left = 232.0
offset_top = 797.0
offset_right = 432.0
offset_bottom = 897.0
theme_override_font_sizes/font_size = 60
text = "Mow
"

[node name="Lawnmower" type="Sprite2D" parent="."]
visible = false
position = Vector2(237, 270)
scale = Vector2(0.6, 0.6)
texture = SubResource("CompressedTexture2D_vljbn")

[node name="AudioLawnmower" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_pw6mi")

[connection signal="pressed" from="ButtonMow1" to="." method="_on_button_mow_1_pressed"]
[connection signal="pressed" from="ButtonMow2" to="." method="_on_button_mow_2_pressed"]
[connection signal="pressed" from="ButtonMow3" to="." method="_on_button_mow_3_pressed"]
